<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/cardView_match_item"
    android:layout_height="wrap_content"

    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="@dimen/cardview_grid_itemRadius"
    card_view:cardElevation="@dimen/cardView_grid_item_Elevation">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/txt_item_homeTeam_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imageview_item_photo_homeTeam"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="@string/home_team_name"
            android:textSize="@dimen/txt_size_item_team_name" />

        <ImageView
            android:id="@+id/imageview_item_photo_homeTeam"
            android:layout_width="@dimen/image_team_photo_width"
            android:layout_height="@dimen/image_team_photo_height"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/image_team_photo_item_layout_margin"
            android:layout_toLeftOf="@+id/txt_result"
            android:scaleType="fitXY"
            android:src="@drawable/ic_soccer_black_24dp" />


        <TextView
            android:id="@+id/txt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:maxLength="5"
            android:padding="@dimen/layout_match_item_padding"
            android:text="@string/txt_item_result_string"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/imageview_item_photo_awayTeam"
            android:layout_width="@dimen/image_team_photo_width"
            android:layout_height="@dimen/image_team_photo_height"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/image_team_photo_item_layout_margin"
            android:layout_toRightOf="@+id/txt_result"
            android:src="@drawable/ic_soccer_black_24dp" />


        <TextView
            android:id="@+id/txt_item_awayTeam_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageview_item_photo_awayTeam"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/awayTeam_name"
            android:textSize="@dimen/txt_size_item_team_name" />
    </RelativeLayout>

</android.support.v7.widget.CardView>


