<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_match_item"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview_widget_item_photo_homeTeam"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/txt_widget_item_homeTeam_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"

                android:gravity="center"
                android:singleLine="true"
android:text="@string/home_team_name"
                android:textColor="@color/black"
                android:textSize="@dimen/txtSize_teamName_details" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_widget_result"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/score"
                android:fontFamily="sans-serif-medium"
                android:gravity="top"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="@dimen/Score" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview_widget_item_photo_awayTeam"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/txt_widget_item_awayTeam_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/awayTeam_name"
                android:textColor="@color/black"
                android:textSize="@dimen/txtSize_teamName_details" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


